# kilo

./: CMakeLists.txt  README.md  build.sh  kilo.c
include/: editor.h  kilo.h  terminal.h
src/: editor_core.c  editor_input.c  editor_row.c  file_io.c  main.c  search.c  syntax.c  terminal.c
